--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import './assets/sass/fonts';
 @import './assets/sass/gradients';
 @import './assets/sass/home';
-@import './assets/sass/feature';
+@import './assets/sass/cards';
+@import './assets/sass/partners';
