--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,6 @@
 @import './assets/sass/home';
 @import './assets/sass/cards';
 @import './assets/sass/partners';
+@import './assets/sass/faq';
+@import './assets/sass/bridgingTheGap';
+@import './assets/sass/footer';
