--- a/src/assets/sass/_cards.scss
+++ b/src/assets/sass/_cards.scss
@@ -71,12 +71,11 @@
         line-height: 35px;
         letter-spacing: 0em;
         text-align: center;
-        
+
         @media screen and (min-width: 768px) {
             font-size: 68px;
             line-height: 78px;
         }
-
     }
     .step-card {
         background: linear-gradient(121.91deg, rgba(255, 255, 255, 0.49) 6.9%, #ffffff 27.84%);
@@ -88,7 +87,7 @@
         .title {
             color: #6029d7;
             font-size: 16px;
-            font-weight: 500;
+            font-weight: 600;
             line-height: 19px;
             letter-spacing: -0.02em;
             text-align: left;
@@ -122,6 +121,59 @@
                 font-size: 14px;
                 line-height: 17px;
             }
+        }
+    }
+}
+
+.banner-wrapper {
+    color: white;
+    background: #6029d7;
+    padding-inline: 40px;
+    border-radius: 2.125rem;
+    margin-inline: 1.125rem;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    @media screen and (min-width: 768px) {
+        border-radius: 3.125rem;
+        margin-inline: 40px;
+        padding-top: 173px;
+        padding-bottom: 100px;
+    }
+    .title {
+        font-size: 30px;
+        font-weight: 700;
+        line-height: 33px;
+        letter-spacing: 0em;
+        text-align: center;
+
+        @media screen and (min-width: 768px) {
+            font-size: 80px;
+            font-weight: 400;
+            line-height: 88px;
+            letter-spacing: -0.02em;
+        }
+    }
+    .description {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: 0em;
+        text-align: center;
+
+        @media screen and (min-width: 768px) {
+            font-size: 20px;
+            line-height: 28px;
+        }
+    }
+    .joined {
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 20px;
+        letter-spacing: 0em;
+        text-align: center;
+        opacity: 50%;
+        @media screen and (min-width: 768px) {
+            font-size: 17px;
         }
     }
 }
