--- a/src/assets/sass/_cards.scss
+++ b/src/assets/sass/_cards.scss
@@ -1,10 +1,8 @@
 .feature-wrapper {
     color: white;
     padding: 54px 24px;
-    .add-bg {
-        background: #6029d7;
-        border-radius: 24px;
-    }
+    // background: #6029d7;
+    border-radius: 24px;
     .title {
         font-size: 35px;
         font-weight: 400;
