feat: fragment section

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,5 +4,6 @@
 @import './assets/sass/cards';
 @import './assets/sass/partners';
 @import './assets/sass/faq';
+@import './assets/sass/fragmented';
 @import './assets/sass/bridgingTheGap';
 @import './assets/sass/footer';
