feat: add mobile nav section

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import './assets/sass/fonts';
 @import './assets/sass/gradients';
+@import './assets/sass/header';
 @import './assets/sass/home';
 @import './assets/sass/cards';
 @import './assets/sass/partners';
