--- a/src/assets/sass/_gradients.scss
+++ b/src/assets/sass/_gradients.scss
@@ -1,6 +1,6 @@
 .pink-gradient {
     background: rgba(244, 240, 250, 1);
-    background: radial-gradient(circle, rgba(214, 148, 255, 0.34) 0%, rgba(244, 240, 250, 1) 70%);
+    background: radial-gradient(circle, rgba(214, 148, 255, 0.34) 0%, rgb(244,240,250) 70%);
     // background: linear-gradient(
     //     90deg,
     //     rgba(244, 240, 250, 1) 35%,
