--- a/src/index.scss
+++ b/src/index.scss
@@ -2,18 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: 'Matter', sans-serif;
-  font-size: 18px;
-  margin: 0;
-  padding: 0;
-  overflow: auto;
-  width: 100dvw;
-  height: 100dvh;
-  // background: rgba(244, 240, 250, 1);
-  &::-webkit-scrollbar {
-    background: transparent !important;
-    height: 0px;
-    width: 0px;
-}
+// #root,
+body
+ {
+    font-family: "Matter", sans-serif;
+    font-size: 18px;
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+    width: 100dvw;
+    height: 100dvh;
+    scroll-behavior: smooth;
+    // background: rgba(244, 240, 250, 1);
+    &::-webkit-scrollbar {
+        background: transparent !important;
+        height: 0px;
+        width: 0px;
+    }
 }
