--- a/src/assets/sass/_bridgingTheGap.scss
+++ b/src/assets/sass/_bridgingTheGap.scss
@@ -7,6 +7,7 @@
         border-radius: 50%;
         background-color: white;
         position: absolute;
+        filter: brightness(1.5);
         // top: 50%;
         // left: 50%;
         display: flex;
