--- a/src/assets/sass/_fragmented.scss
+++ b/src/assets/sass/_fragmented.scss
@@ -18,6 +18,23 @@
             margin-top: 10rem;
         }
     }
+    .circle {
+        width: 24dvw;
+        height: 24dvw;
+        max-width: 240px; // Initial width of the circle
+        max-height: 240px; // Initial height of the circle
+        border-radius: 50%;
+        background-color: white;
+        position: absolute;
+        filter: brightness(1.5);
+        // top: 50%;
+        // left: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: transform 0.5s ease; // Transition for smooth scaling
+    }
+    
     .description {
         color: #6029d7;
         font-size: 11px;
