--- a/src/assets/sass/_faq.scss
+++ b/src/assets/sass/_faq.scss
@@ -25,15 +25,21 @@
             line-height: 30px;
         }
     }
+    .disable-select {
+        -webkit-user-select: none; /* Safari */
+        -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* IE 10+ */
+        user-select: none; /* Standard syntax */
+    }
     .question {
-        font-size: 16px;
+        font-size: 18px;
         font-weight: 600;
         line-height: 24px;
         letter-spacing: 0em;
         text-align: left;
 
         @media screen and (min-width: 768px) {
-            font-size: 20px;
+            font-size: 22px;
             font-weight: 700;
             line-height: 26px;
         }
@@ -44,5 +50,10 @@
         line-height: 24px;
         letter-spacing: 0em;
         text-align: left;
+        @media screen and (min-width: 768px) {
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 26px;
+        }
     }
 }
