--- a/src/assets/sass/_faq.scss
+++ b/src/assets/sass/_faq.scss
@@ -32,6 +32,7 @@
         user-select: none; /* Standard syntax */
     }
     .question {
+        cursor: pointer;
         font-size: 18px;
         font-weight: 600;
         line-height: 24px;
